@@ -7,6 +7,7 @@ source [file join [file dirname [info script]] tree.tcl]
 source [file join [file dirname [info script]] matrix.tcl]
 source [file join [file dirname [info script]] pool.tcl]
 source [file join [file dirname [info script]] record.tcl]
+source [file join [file dirname [info script]] list.tcl]
 namespace eval struct {
 	namespace import -force graph::*
 	namespace import -force queue::*
@@ -15,5 +16,6 @@ namespace eval struct {
 	namespace import -force matrix::*
 	namespace import -force pool::*
 	namespace import -force record::*
+	namespace import -force list::*
 	namespace export *
 }
